# test_project_1

./: iris.ipynb  iriskaggle.ipynb  main.py  pyproject.toml  test.ipynb
