[project]
name = "test-project-1"
version = "0.1.0"
description = "This is my first project"
readme = "README.md"
requires-python = ">=3.12"
authors =  [{name = "Dilusha", email = "dilushasilva78@gmail.com"}]
dependencies = [
    "ipykernel>=6.29.5",
    "ipyvuetify>=1.11.2",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
]


[tool.uv]
python-downloads = "never"
python-preference = "only-system"
cache-dir = ".uv-cache"
package = false
